Version 3.3.3 (2010-xx-xx)
	Added new script_loaded callback function setting for the jQuery plugin.
	Removed some unnecessary inline style information from some of the dialogs.
	Fixed some issues with the changing for the TinyMCE jQuery plugin.
	Fixed bug where some texts in the new paste plugin wasn't placed in language pack.
	Fixed bug where IE would produce an incorrect information message when cutting.
	Fixed bug where removing items using the xhtmlxtras plugin wouldn't work correctly.
	Fixed bug where setting table background images would add extra quotes on Gecko.
Version 3.3.2 (2010-03-25)
	Fixed bug where it was possible to scale the editor iframe smaller than the editor UI.
	Fixed bug where some of the resizing option didn't work with the new live resize.
	Fixed bug where the format listbox didn't show nestled formats correctly.
	Fixed bug where the native listboxes didn't work correctly.
	Fixed bug where font size selection in using the legacyoutput plugin would produce errors.
	Fixed so block and blockquote formats remove their matching element regardless of it's attributes.
Version 3.3.1 (2010-03-18)
	Added new live resize feature, the editor contents is now visible while resizing.
	Fixed bug where some valid_element patterns would produce an unknown property error.
	Fixed bug where it wasn't possible to toggle off blockquotes.
	Fixed bug where an undo level wasn't produced when applying formatting using the styles dropdown.
	Fixed bug where IE 6/7 wouldn't perform caret formatting due to a focus/event bug in IE.
	Fixed bug where undo/redo wasn't restoring the previous selection correctly.
	Fixed bug where the caret would become invisible if you resized the editor in latest Gecko.
	Fixed bug where the class attribute wasn't completely removed in IE 6/7 when the removeClass function was used.
	Fixed so the matchNode method of the Formatter class returns the matched format rule.